--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   <META NAME="DC.bibliographicCitation" CONTENT="Tinnemann, Peter, Böhm Heidrun, Cwojdzinski Detlef, and Grote Ulrike., et al Krisenmanagement. Lehrbuch für den Öffentlichen Gesundheitsdienst 1. Berlin, 2020. https://doi.org/10.25815/h0ec-f967" />
   <LINK REL="SCHEMA.DC" HREF="http://purl.org/dc/elements/1.1/" />
 
-  <link rel="shortcut icon" href="{{ 'favicon.ico' | absolute_url }}" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ 'images/favicon.ico' | absolute_url }}" type="image/x-icon">
 
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs.css' | absolute_url }}">
 
